# versetools

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc  .syncpackrc.ts  .trivyignore  Dockerfile  README.md  auth.sh  docker-compose.dev.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  syncpack.config.ts  trivy.yaml  tsconfig.json  vite.config.ts
apps/data/: blueprints.py  globals.py  locations.py  main.py  missions.py  pyproject.toml  translations.py
apps/data/items/: __init__.py  __main__.py  components.py  entities.py  tags.py  types.py
apps/data/scdatatools/: __init__.py  actionmap.py  p4k.py  profile.py  utils.py
apps/data/scdatatools/blender/: logging.py
apps/data/scdatatools/blender/addon/: __init__.py  header_menu.py  preferences.py  utils.py
apps/data/scdatatools/blender/blueprints/: __init__.py  hooks.py  lighting.py  manager.py  ui.py  utilities.py
apps/data/scdatatools/blender/materials/: __init__.py  utils.py
apps/data/scdatatools/blender/utils/: __init__.py
apps/data/scdatatools/cli/: __init__.py  __main__.py  plugin.py  utils.py
apps/data/scdatatools/cli/commands/: blender.py  blueprint.py  p4k.py  (+7 more)
apps/data/scdatatools/engine/: model_utils.py
apps/data/scdatatools/forge/: __init__.py  tags.py  utils.py
apps/data/scdatatools/launcher/: __init__ .py  __init__.py
apps/data/scdatatools/plugins/: __init__.py
apps/data/scdatatools/sc/: __init__.py  component_manager.py  config.py  localization.py
apps/data/scdatatools/wwise/: __init__.py  bnk.py  utils.py  wem.py
(+486 files in other folders)
